--- a/popply/src/main/popply/public/index.html
+++ b/popply/src/main/popply/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--<link rel="icon" href="%PUBLIC_URL%/favicon.png" />-->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon32.png" sizes="32x32">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
